--- a/une-page-web-comme-interface-mobile/www/index.html
+++ b/une-page-web-comme-interface-mobile/www/index.html
@@ -11,7 +11,7 @@
         content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
     >
 
-    <title>Interface mobile pour TouchDesigner</title>
+    <title>Une page web comme interface mobile</title>
 
     <link rel="stylesheet" href="styles.css">
 
