--- a/une-page-web-comme-interface-mobile/www/index.html
+++ b/une-page-web-comme-interface-mobile/www/index.html
@@ -11,7 +11,7 @@
         content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
     >
 
-    <title>Une page web comme interface mobile</title>
+    <title>Interface mobile pour TouchDesigner</title>
 
     <link rel="stylesheet" href="styles.css">
 
@@ -29,7 +29,7 @@
     </section>
 
     <section id="connexion">
-      <label for="url">URL pour la connexion:</label>
+      <label for="url">Serveur WebSocket:</label>
       <input id="url" type="text" value="ws://localhost:9980">
       <button>Connexion!</button>
     </section>
